# nwsl-fantasy-platform

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  HANDOFF_NWSL_MODEL_2026-05-25.md  HANDOFF_SESSION_2026-07-22.md  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  sentry.client.config.ts  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
nwsl-model/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
nwsl-model/api/: deps.py  main.py  schemas.py
nwsl-model/configs/: default.yaml
nwsl-model/docs/: season_validation_protocol.md
nwsl-model/scripts/: analyze_betting_thresholds.py  append_odds_snapshot.py  audit_model_inputs.py  backtest.py  build_dataset.py  build_real_data.py  build_season_game_database.py  capture_clv_cron.sh  capture_clv_snapshot.py  diagnose_market_softness.py  evaluate.py  evaluate_totals_model.py  export_web.py  fetch_apify_draftkings_odds.py  fetch_apify_footystats_odds.py  fetch_apify_oddsportal_history.py  fetch_asa_data.py  fetch_foxsports_odds.py  fetch_nwsl_availability.py  fetch_odds.py  fetch_official_nwsl_data.py  fetch_official_player_appearances.py  generate_betting_slate.py  generate_sample_data.py  manage_ledger.py  materialize_closing_odds.py  normalize_odds.py  predict.py  promote.py  report_artifact_diagnostics.py  report_clv.py  run_operator_report.py  season_holdout.py  track_matchday.py  track_matchday_cron.sh  train.py  tune_backtest.py  tune_betting_thresholds.py
nwsl-model/tests/: conftest.py  test_api.py  test_artifacts.py  (+54 more)
(+867 files in other folders)
